# cite-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh
.github/workflows/: pr.yml  rust.yml  test.yml
docs/: PRD.md
new-project/: .gitignore  cite.toml  metadata.yml
src/: cache.rs  cli.rs  compiler.rs  deploy.rs  doctor.rs  error.rs  main.rs  manifest.rs  metadata.rs  project.rs  report.rs  scaffold.rs  slug.rs  tui.rs  uninstall.rs  upgrade.rs  validation.rs
src/core/: cache.rs  compiler.rs  deploy.rs  doctor.rs  metadata.rs  mod.rs  project.rs  report.rs  scaffold.rs  uninstall.rs  upgrade.rs
tests/: integration.rs
