[package]
name = "cite-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }
colored = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
