[package]
name = "cite-cli"
authors = ["Binay Pradhan"]
version = "0.1.0-alpha.1"
edition = "2024"
readme = "README.md"

license-file = "LICENSE"
repository = "https://github.com/VinayIN/cite-cli"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
percent-encoding = "2.3"
uuid = { version = "1.23", features = ["v4"] }
colored = "3.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = { version = "0.30.2", features = ["crossterm"] }

[dev-dependencies]
tempfile = "3.19"
httpmock = "0.7"
regex = "1.13.0"

[[bin]]
name = "cite-cli"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "thin"
